--- a/resources/css/register.css
+++ b/resources/css/register.css
@@ -1,35 +1,34 @@
-html, body {
-    height: 100%;
-    margin: 0;
-}
-
 body{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+    height: 100vh;
 
-h1,h3 {
+}
+label {
+    display: block;
     font-family: 'Poppins', sans-serif;
-    color: #2c3e50
+    font-size: 0.95rem;
+    color: #2c3e50;
+    margin-bottom: 0.5rem;
+    text-align: left;
 }
 
-
-#login_y_registro {
-
-    align-items: center;
-    text-align: center;
-
+div{
     max-width: 400px;
     padding: 1rem;
     border-radius: 15px;
 
     background-color: #e5eaf5;
     border: 1px solid #2c3e50;
+
+    align-items: center;
+    text-align: center;
+
+
 }
 
-input[type="submit"],
-button {
+input[type="submit"] {
     font-family: 'Poppins', sans-serif;
     background-color: #2c3e50;
     color: #ffffff;
@@ -43,9 +42,12 @@ button {
     margin-top: 1rem;
 }
 
-input[type="submit"]:hover,
-button:hover {
+input[type="submit"]:hover {
     background-color: #1a252f;
 }
 
+h1,h3 {
+    font-family: 'Poppins', sans-serif;
+    color: #2c3e50
+}
 
